--- a/notepad.html
+++ b/notepad.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="note.css">
 </head>
 <body>
-    <div class="container">
+    <div class="containers">
         <h1><img src="img1.png" alt=""> Notes</h1>
         <br>
         <button class="btn"><img src="img2.png" alt="">Create Notes</button>
     <div class="notes-container">
-        <!-- <p contenteditable="true" class="input-box">
+        <p contenteditable="true" class="input-box">
             <img src="img3.png" alt="">
-        </p> -->
+        </p>
     </div>
     </div>
 
