--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -12,31 +12,35 @@
    <div class="begin" style="display: flex;flex-direction:column;"> 
     <header class="main" style="display: flex;">
        <h1 style="margin: left 40px;"><b>My PortFolio</b></h1>
-       <h2 id="information" style="margin-left: 300px;"><b>Info</b></h2>
+       <h2 class="information" style="margin-left: 300px;"><b>Info</b></h2>
        <h2 id="work" style="margin-left: 30px;"><b>Work Experience</b></h2>
        <h2 id="test" style="margin-left: 30px;"><b>Testimony</b></h2>
        <h2 id="end" style="padding-left:  50px;"><b>Endorsments</b></h2>
+       <br>
        <button id="login"><P><b>LOGOUT</b></P></button>
     </header>
    
 </div>
 
-   
-    
     <hr style="width: 100%;">
-    <div id="left">
+    <!-- <div class="split left">
         <div class="left">
             <h1 style="padding-left: 10px;font-size: x-large;" class="wel">Welcome Justin!</h1>
         </div>
     </div>
-<div class="rest">
-    <div class="text">
+<div class="right centered">
+    <div class="centered">
         <img src="sample.png" alt="lOADING...">
         <p>NAME: <br>KAREEM ADEOLA</p>
         <p>OCCUPATION:   <BR>GRAPHIC DESIGNER</BR></p>
     </div>
-</div>   
+</div>    -->
+ 
+<div>
+    <h1 style="font-size: large; text-align: center;"><b>WORK EXPERIENCES</b></h1>
 
+    
+</div>
 
 </body>
 </html>
