--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -17,30 +17,6 @@
        <h2 id="test" style="margin-left: 30px;"><b>Testimony</b></h2>
        <h2 id="end" style="padding-left:  50px;"><b>Endorsments</b></h2>
        <br>
-       <button id="login"><P><b>LOGOUT</b></P></button>
-    </header>
-   
-</div>
-
-    <hr style="width: 100%;">
-    <!-- <div class="split left">
-        <div class="left">
-            <h1 style="padding-left: 10px;font-size: x-large;" class="wel">Welcome Justin!</h1>
-        </div>
-    </div>
-<div class="right centered">
-    <div class="centered">
-        <img src="sample.png" alt="lOADING...">
-        <p>NAME: <br>KAREEM ADEOLA</p>
-        <p>OCCUPATION:   <BR>GRAPHIC DESIGNER</BR></p>
-    </div>
-</div>    -->
- 
-<div>
-    <h1 style="font-size: large; text-align: center;"><b>WORK EXPERIENCES</b></h1>
-
-    
-</div>
-
+   <button id="log"><b><h1>LOGOUT</h1></b></button>
 </body>
 </html>
