another for the day

--- a/html/job.html
+++ b/html/job.html
@@ -13,7 +13,7 @@
         
         /* Slideshow container */
         .slideshow-container {
-          max-width: 1000px;
+          max-width: 70%;
           position: relative;
           margin: auto;
         }
@@ -109,12 +109,12 @@
         <h2 class="contacts" style="padding-left: 100px;padding-top: 30px;"><b>CONTACTS</b></h2>
         <button class="log"><h1><b>LOGOUT</b></h1></button>
     </div>
-    
+
   <div class="top"> 
-<div class="space">
-    <h1><b>Info</b></h1>
-    <img id="img1" src="sample.png" alt="" style="margin-right:20%;">
+<div class="space" style="display: flex;flex-direction: row;">
+    <img id="img1" src="sample.png" alt="" style="margin-right:20%;padding-top: 30px;">
 </div>
+
 <br>
 <h1 style="text-align: center;font-family: cursive;font-weight: bolder;"><b>WORK <br>EXPERIENCE</b></h1>
 <div id="experiences">
@@ -203,6 +203,7 @@
           dots[slideIndex-1].className += " active";
         }
         </script>
+
 </div>
 </body>
 </html>
