--- a/html/job.html
+++ b/html/job.html
@@ -129,9 +129,9 @@
 
 <br>
 <h1 style="text-align: center;font-family: cursive;font-weight: bolder; background-color: #bbb;"><b>WORK <br>EXPERIENCE</b></h1>
-<div id="experiences">
+<div class="experiences">
     <div class="trial">
-    <button id="web"><h1 style="font-size: x-large;"><b>WEB<br>DEVELOPMENT</b></h1></button>
+    <button id="web"><h1 style="font-size: x-large;border-radius: 10px;"><b>WEB<br>DEVELOPMENT</b></h1></button>
        <button class="soft"><h1><b>SOFTWARE <br>DEVELOPMENT</b></h1></button>
         <button class="UI"><h1><b>UI/UX <br>DESIGNER</b></h1></button>
     </div>
