commit for the day

--- a/html/job.html
+++ b/html/job.html
@@ -124,7 +124,16 @@
 
   <div class="top"> 
 <div class="space" style="display: flex;flex-direction: row;">
-    <img id="img1" src="sample.png" alt="" style="margin-right:20%;padding-top: 30px;">
+    <img id="img1" src="sample.png" alt="" >
+    <div>
+    <input style="margin-left:15px;height:50px;width:200px;border-radius: 18px;border: 1px solid;margin-top: 10px;padding-left:20px;" type="text" placeholder="FIRSTNAME">
+    <br>
+    <input style="margin-left: 15px;height: 50px;width: 200px;border-radius: 18px;border: 1px solid;margin-top: 10px;
+    padding-left: 20px;" type="text" placeholder="OCCUPATION">
+    <br>
+    <input style="margin-left:15px;height:50px;width:200px;border-radius: 18px;border: 1px solid;margin-top: 10px;padding-left:20px; padding-top: 10px;" type="text" placeholder="LASTNAME">
+    
+  </div>
 </div>
 
 <br>
@@ -187,11 +196,15 @@
       <span class="dot" onclick="currentSlide(3)"></span> 
     </div>
 <br>
+
+<div>
+
+</div>
     
 <div style="padding-top: 650px;">
   <footer style="background-color: black;height:200px;display: flex;flex-direction: row;">
       <p style="color: gray;margin-left: 50px;margin-top: 30px;font-size:40px;">Google</p><br>
-      <a style="padding-top: 10px;padding-left: 60px;color: white;" href=""><h1><b>Contact us</b></h1></a>
+      <a class="cus" style="padding-top: 10px;padding-left: 60px;color: white;" href=""><h1><b>Contact us</b></h1></a>
       <a style="margin-left:2000px;margin-top:none ;color: gray;" class="policy" href="https://www.google.com/policies/"><h1><b>Privacy & policy</b></h1></a>
       <!-- <img style="width: 60px;height: 50px;margin-top: 20px;margin-left: 20px;" src="006.png" alt="">
       <img style="width: 50px;height: 40px;margin-top: 28px;" src="008.png" alt=""> -->
