--- a/html/practice.html
+++ b/html/practice.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="practice.csss.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+    crossorigin="anonymous">
 </head>
 <body>
     <!-- <h1><b>Welcome!</b></h1>
@@ -21,13 +24,19 @@
     <button>I'm feeling lucky</button> -->
 
 
-    <div style="display: block;">
-        <img style="width: 150px;height: 100px;" src="/images/0002.jpg" alt="">
-        <div style="padding-left: 30px;margin-top: none;border-radius: 1px;">
-            <p>LANGAYA <br>FOJIUMA</p>
-            <P>MODISTE</P>
+    <div class="cards">
+
+        <img class="avatar" src="/images/0002.jpg" alt="">
+            <p><B>LANGAYA <br>FOJIUMA</B></p>
+            <P>FRONT-END DEVELOPER</P>
             <p>PLATEAU STATE</p>
-        </div>
+
     </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+     crossorigin="anonymous"></script>
+
 </body>
 </html>
