--- a/html/practice.html
+++ b/html/practice.html
@@ -9,27 +9,18 @@
     crossorigin="anonymous">
 </head>
 <body>
-    <!-- <h1><b>Welcome!</b></h1>
-    <br>
-    <p>you have beeen granted access to the platform. <br> Please sign up</p>
-    <input type="text" placeholder="Enter UserName">
-    <input type="password" placeholder="Enter password">
-    <input type="file" placeholder="choose a file">
-    <button>sign up</button>
+  
+    <div class="cards ">
 
-    <br>
-    <img src="/images/google.png" alt="">
-    <input type="text">
-    <button>Google search</button>
-    <button>I'm feeling lucky</button> -->
+<div>
+        <img class="avatar " src="/images/0002.jpg" alt="">
+    </div>
 
-
-    <div class="cards">
-
-        <img class="avatar" src="/images/0002.jpg" alt="">
-            <p><B>LANGAYA <br>FOJIUMA</B></p>
+    <div>
+            <p><B>LANGAYA FOJIUMA</B></p>
             <P>FRONT-END DEVELOPER</P>
             <p>PLATEAU STATE</p>
+        </div>
 
     </div>
 
