--- a/html/practice.html
+++ b/html/practice.html
@@ -9,7 +9,22 @@
     crossorigin="anonymous">
 </head>
 <body>
-  
+<h1 style="color: white;">Join the Exploration!</h1>
+<button>Apply!</button>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--   
     <div class="cards ">
 
 <div>
@@ -23,7 +38,7 @@
         </div>
 
     </div>
-
+ -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
