--- a/html/practice.html
+++ b/html/practice.html
@@ -9,20 +9,11 @@
     crossorigin="anonymous">
 </head>
 <body>
-<h1 style="color: white;">Join the Exploration!</h1>
-<button>Apply!</button>
-
-
-
-
-
-
-
-
-
-
-
-
+    <div id="hero">
+<h1 class="test"><span class="join">Join</span> the <span class="explore">Exploration!</span></h1>
+<button class="btn">Apply!</button>
+</div>
+ 
 
 <!--   
     <div class="cards ">
