--- a/html/practice.html
+++ b/html/practice.html
@@ -8,11 +8,51 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
     crossorigin="anonymous">
 </head>
-<body>
-    <div id="hero">
+<body class="body">
+<div id="header">
+    <h1>Today is Nick's birthday </h1>
+    <img id="bff" src="img2.png" alt="PICTURE">
+    <h2 id="bday-age">24 years old</h2>
+    <h4 id="bday-date">01.11.2022</h4>
+</div>
+
+<div class="gift-section">
+    <h2 class="gift-title">Here's how happy  I am for you! </h2>
+    <h3 class="gift-hint">(Hover over the gift)</h3>
+
+    <div class="gift-img"></div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div id="hero">
 <h1 class="test"><span class="join">Join</span> the <span class="explore">Exploration!</span></h1>
 <button class="btn">Apply!</button>
-</div>
+</div> -->
  
 
 <!--   
