--- a/html/practice.html
+++ b/html/practice.html
@@ -5,75 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="practice.csss.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-    crossorigin="anonymous">
+    <link rel="stylesheet" href="practice.js">
 </head>
-<body class="body">
-<div id="header">
-    <h1>Today is Nick's birthday </h1>
-    <img id="bff" src="img2.png" alt="PICTURE">
-    <h2 id="bday-age">24 years old</h2>
-    <h4 id="bday-date">01.11.2022</h4>
-</div>
-
-<div class="gift-section">
-    <h2 class="gift-title">Here's how happy  I am for you! </h2>
-    <h3 class="gift-hint">(Hover over the gift)</h3>
-
-    <div class="gift-img"></div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <div id="hero">
-<h1 class="test"><span class="join">Join</span> the <span class="explore">Exploration!</span></h1>
-<button class="btn">Apply!</button>
-</div> -->
- 
-
-<!--   
-    <div class="cards ">
-
-<div>
-        <img class="avatar " src="/images/0002.jpg" alt="">
-    </div>
-
-    <div>
-            <p><B>LANGAYA FOJIUMA</B></p>
-            <P>FRONT-END DEVELOPER</P>
-            <p>PLATEAU STATE</p>
-        </div>
-
-    </div>
- -->
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-     crossorigin="anonymous"></script>
-
+<body>
+<h1>Number of people entered</h1>
+<h2 id="count-el">0</h2>
+<button id="increment-btn" onclick="increment()">INCREMENT</button>
+<script src="practice.js"></script>
 </body>
 </html>
