--- a/html/practice.html
+++ b/html/practice.html
@@ -8,10 +8,24 @@
     <link rel="stylesheet" href="practice.js">
 </head>
 <body>
-<h1>Number of people entered</h1>
+<!-- <p id = "welcome-el"></p>
+<script src="practice.js"></script> -->
+<!-- <p id="error" onclick="Error()"></p> -->
+<!-- <h1>Number of people entered</h1>
 <h2 id="count-el">0</h2>
 <button id="increment-btn" onclick="increment()">INCREMENT</button>
-<script src="practice.js"></script>
 <button id="save-btn" onclick="save()">SAVE</button>
+<p >Previous entries: <span id="save-el"></span></p> -->
+
+<span id="num1-el"></span>
+<span id="num2-el"></span>
+<br>
+<button>Add</button>
+<button>Subtract</button>
+<button>Divide</button>
+<button>Multiply</button>
+<br>
+<span id="sum-el">Sum: </span>
+<script src="practice.js"></script>
 </body>
 </html>
