--- a/html/practice.html
+++ b/html/practice.html
@@ -8,6 +8,106 @@
     <link rel="stylesheet" href="practice.js">
 </head>
 <body>
+
+<h1>BlackJack</h1>
+    <p id="message-el">Want to play a round?</p>
+   <br>
+    <div id="texts">
+    <p id="cards-el">Cards:</p>
+    <br>
+    <p id="sum-el">Sum:</p>
+</div>
+<button  onclick="startGame()">START GAME.</button>
+<br>
+<button onclick="newCard()" style="margin-top: 20px;">NEW CARD</button>
+<script src="practice.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- <p id = "welcome-el"></p>
 <script src="practice.js"></script> -->
 <!-- <p id="error" onclick="Error()"></p> -->
@@ -16,16 +116,12 @@
 <button id="increment-btn" onclick="increment()">INCREMENT</button>
 <button id="save-btn" onclick="save()">SAVE</button>
 <p >Previous entries: <span id="save-el"></span></p> -->
-
-<span id="num1-el"></span>
-<span id="num2-el"></span>
+<!-- <span id="num1-el">_</span>
+<span id="num2-el">_</span>
 <br>
-<button>Add</button>
-<button>Subtract</button>
-<button>Divide</button>
-<button>Multiply</button>
+<button onclick="add()">Add</button>
+<button onclick="subtract()">Subtract</button>
+<button onclick="divide()">Divide</button>
+<button onclick="multiply()">Multiply</button>
 <br>
-<span id="sum-el">Sum: </span>
-<script src="practice.js"></script>
-</body>
-</html>
+<span id="sum-el">Sum: </span> -->
