--- a/html/pomodoro.html
+++ b/html/pomodoro.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="pomodoro.css">
 </head>
 <body>
-    <h1>Break Length</h1>
+    <h1 id="break-length">Break Length</h1>
     <div class="breaks">
-        <button>Break - </button>
-        <p>5</p>
-        <button>Break +</button>
+        <button id="break-"><b>Break -</b></button>
+        <p id="number-between"><b>5</b></p>
+        <button id="break-plus"><b>Break +</b></button>
+    </div>
+
+    <h1 id="session-length">Session Length</h1>
+    <div class="sessions">
+        <button id="session-minus"><b>Session -</b></button>
+        <p id="number-between"><b>25</b></p>
+        <button id="session-plus">Session+</button>
     </div>
 </body>
 </html>
