--- a/html/pomodoro.html
+++ b/html/pomodoro.html
@@ -16,9 +16,9 @@
 
     <h1 id="session-length">Session Length</h1>
     <div class="sessions">
-        <button id="session-minus"><b>Session -</b></button>
+        <button id="session-minus">Session -</button>
         <p id="number-between"><b>25</b></p>
-        <button id="session-plus">Session+</button>
+        <button id="session-plus">Session +</button>
     </div>
 </body>
-</html>
+</html> 
