--- a/html/practice.html
+++ b/html/practice.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="practice.csss.css">
+    <link rel="stylesheet" href="practice.js">
 </head>
 <body>
  <input type="text" id="input-el">
  <button id="save-el" onclick="click()">SAVE INPUT</button>
 
-<script src="practice.js"></script>
+<script></script>
 </body>
 </html>
 
