--- a/html/practice.html
+++ b/html/practice.html
@@ -9,9 +9,9 @@
 </head>
 <body>
  <input type="text" id="input-el">
- <button id="save-el" onclick="click()">SAVE INPUT</button>
+ <button id="save-el">SAVE INPUT</button>
 
-<script></script>
+<script src="practice.js"></script>
 </body>
 </html>
 
