--- a/html/practice.html
+++ b/html/practice.html
@@ -9,9 +9,21 @@
 </head>
 <body>
 
- <input type="text" id="input-el">
- <button id="save-el">SAVE INPUT</button>
-<ul id="ul-el"></ul>
+    <h1>BlackJack</h1>
+    <p id="message-el">Want to play a round?</p>
+   <br>
+    <div id="texts">
+    <p id="cards-el">Cards:</p>
+    <br>
+    <p id="sum-el">Sum:</p>
+</div>
+<button id="start-el" onclick="startGame()">START GAME</button>
+<br>
+<button onclick="newCard()" style="margin-top: 20px;">NEW CARD</button>
+<p id="player-el"></p>
+
+
+
 <script src="practice.js"></script>
 </body>
 </html>
@@ -24,23 +36,13 @@
 
 
 
+<!-- <input type="text" id="input-el">
+<button id="save-el">SAVE INPUT</button>
+<ul id="ul-el"></ul> -->
 
 
 
 
-
-<!-- <h1>BlackJack</h1>
-    <p id="message-el">Want to play a round?</p>
-   <br>
-    <div id="texts">
-    <p id="cards-el">Cards:</p>
-    <br>
-    <p id="sum-el">Sum:</p>
-</div>
-<button id="start-el" onclick="startGame()">START GAME</button>
-<br>
-<button onclick="newCard()" style="margin-top: 20px;">NEW CARD</button>
-<p id="player-el"></p> -->
 
 
 
