--- a/html/Calculator.html
+++ b/html/Calculator.html
@@ -57,8 +57,7 @@
           m3 = 11;
           y3--;
         }
-        result.innerHTML = `You are ${y3} years, ${m3} months and ${d3} days old now`
-          
+        result.innerHTML = `You are ${y3} years, ${m3} months and ${d3} days old now`;
       }
 
       function getDaysInMonth(year, month) {
