--- a/html/notepad.html
+++ b/html/notepad.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="note.css">
-</head>
-<body>
+    <link rel="stylesheet" href="note.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1><img src="img1.png" alt=""> Notes</h1>
-        <br>
-        <button class="btn"><img src="img2.png" alt="">Create Notes</button>
-    <div class="notes-container">
+      <h1><img src="img1.png" alt="" /> Notes</h1>
+      <br />
+      <button class="btn"><img src="img2.png" alt="" />Create Notes</button>
+      <div class="notes-container">
         <p contenteditable="true" class="input-box">
-            <img src="img3.png" alt="">
+          <img src="img3.png" alt="" />
         </p>
-    </div>
+      </div>
     </div>
 
-<script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
