--- a/html/practice.html
+++ b/html/practice.html
@@ -1,115 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="practice.csss.css">
-    <link rel="stylesheet" href="practice.js">
-</head>
-<body>
-
-    <h1>BlackJack</h1>
-    <p id="message-el">Want to play a round?</p>
-   <br>
-    <div id="texts">
-    <p id="cards-el">Cards:</p>
-    <br>
-    <p id="sum-el">Sum:</p>
-</div>
-<button id="start-el" onclick="startGame()">START GAME</button>
-<br>
-<button onclick="newCard()" style="margin-top: 20px;">NEW CARD</button>
-<p id="player-el"></p>
-
-
-
-<script src="practice.js"></script>
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-<!-- <input type="text" id="input-el">
+    <link rel="stylesheet" href="practice.csss.css" />
+    <link rel="stylesheet" href="practice.js" />
+  </head>
+  <body>
+   <input type="text" id="input-el">
 <button id="save-el">SAVE INPUT</button>
-<ul id="ul-el"></ul> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<ul id="ul-el"></ul>
+
+    <script src="practice.js"></script>
+  </body>
+</html>
 
 
 
@@ -130,3 +35,27 @@
 <button onclick="multiply()">Multiply</button>
 <br>
 <span id="sum-el">Sum: </span> -->
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <h1>BlackJack</h1>
+<p id="message-el">Want to play a round?</p>
+<br />
+<div id="texts">
+  <p id="cards-el">Cards:</p>
+  <br />
+  <p id="sum-el">Sum:</p>
+</div>
+<button id="start-el" onclick="startGame()">START GAME</button>
+<br />
+<button onclick="newCard()" style="margin-top: 20px">NEW CARD</button>
+<p id="player-el"></p> -->
