--- a/html/DOM.html
+++ b/html/DOM.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <div></div>
+    <div class="container"> 
+        <h1 id="main-heading">Favourite Movie Franchise</h1>
+        <ul>
+            <li>The Matrix</li>
+            <li>Star Wars</li>
+            <li>Harry Potter</li>
+            <li>Lord of the Rings</li>
+            <li>Marvel</li>
+        </ul>
+    </div>
+<script src="DOM.js"></script>
 </body>
 </html>
