--- a/html/DOM.html
+++ b/html/DOM.html
@@ -9,7 +9,9 @@
     <div class="container"> 
         <h1 id="main-heading">Favourite Movie Franchise</h1>
         <ul>
-            <li>The Matrix</li>
+            <li class="list-Items">
+                <span>Neo</span>
+                The Matrix</li>
             <li>Star Wars</li>
             <li>Harry Potter</li>
             <li>Lord of the Rings</li>
