--- a/html/DOM.html
+++ b/html/DOM.html
@@ -12,10 +12,10 @@
             <li class="list-Items">
                 <span>Neo</span>
                 The Matrix</li>
-            <li>Star Wars</li>
-            <li>Harry Potter</li>
-            <li>Lord of the Rings</li>
-            <li>Marvel</li>
+            <li class="list-Items">Star Wars</li>
+            <li class="list-Items" >Harry Potter</li>
+            <li class="list-Items">Lord of the Rings</li>
+            <li class="list-Items">Marvel</li>
         </ul>
     </div>
 <script src="DOM.js"></script>
