--- a/html/DOM.html
+++ b/html/DOM.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="DOM.css">
 </head>
 <body>
     <div class="container"> 
-        <h1 id="main-heading">Favourite Movie Franchise</h1>
+        <h1 style="color: red;" id="main-heading">Favourite Movie Franchise</h1>
         <ul>
             <li class="list-Items">
                 <span>Neo</span>
