--- a/html/DOM.html
+++ b/html/DOM.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="DOM.css">
-</head>
-<body>
-    <div class="container"> 
-        <h1 style="color: red;" id="main-heading">Favourite Movie Franchise</h1>
-        <ul>
-            <li class="list-Items">
-                <span>Neo</span>
-                The Matrix</li>
-            <li class="list-Items">Star Wars</li>
-            <li class="list-Items" >Harry Potter</li>
-            <li class="list-Items">Lord of the Rings</li>
-            <li class="list-Items">Marvel</li>
-        </ul>
+    <link rel="stylesheet" href="DOM.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1 style="color: red" id="main-heading">Favourite Movie Franchise</h1>
+      <ul>
+        <li class="list-Items">
+          <span>Neo</span>
+          The Matrix
+        </li>
+        <li class="list-Items">Star Wars</li>
+        <li class="list-Items">Harry Potter</li>
+        <li class="list-Items">Lord of the Rings</li>
+        <li class="list-Items">Marvel</li>
+      </ul>
     </div>
-<script src="DOM.js"></script>
-</body>
+    <script src="DOM.js"></script>
+  </body>
 </html>
