--- a/html/DOM.html
+++ b/html/DOM.html
@@ -19,6 +19,7 @@
         <li class="list-Items">Lord of the Rings</li>
         <li class="list-Items">Marvel</li>
       </ul>
+      <button id="btn-3">Click</button>
     </div>
     <script src="DOM.js"></script>
   </body>
