--- a/html/DOM.html
+++ b/html/DOM.html
@@ -7,23 +7,15 @@
     <link rel="stylesheet" href="DOM.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="header">
-        <h2>Javascript Quote Generator</h2>
+    <button id="open-btn">
+      <p>Where's our Modal?</p>
+    </button>
+    <div id="modal-container">
+      <div id="modal">
+        <p>Here I am!</p>
+        <div id="close-btn">&times;</div> 
+        <!-- to create the close sign -->
       </div>
-      <div class="main-content">
-      <div class="text-area">
-        <span class="quote">
-          "I do the very best I know how the very best I
-          can; and I mean to keep on doing so until the end."
-        </span>
-      </div>
-      <div class="person">Abraham Lincoln</div>
-
-      <div class="button-area">
-        <button id="new-quote">New Quote</button>
-      </div>
-    </div>
     </div>
     <script src="DOM.js"></script>
   </body>
@@ -44,21 +36,23 @@
 
 
 
-
-
-
-
 <!-- <div class="container">
-  <h1 style="color: red" id="main-heading">Favourite Movie Franchise</h1>
-  <ul>
-    <li class="list-Items">
-      <span>Neo</span>
-      The Matrix
-    </li>
-    <li class="list-Items">Star Wars</li>
-    <li class="list-Items">Harry Potter</li>
-    <li class="list-Items">Lord of the Rings</li>
-    <li class="list-Items">Marvel</li>
-  </ul>
-  <button id="btn-3">Click</button>
+  <div class="header">
+    <h2>Javascript Quote Generator</h2>
+  </div>
+  <div class="main-content">
+  <div class="text-area">
+    <span class="quote">
+      "I do the very best I know how the very best I
+      can; and I mean to keep on doing so until the end."
+    </span>
+  </div>
+  <div class="person">Abraham Lincoln</div>
+
+  <div class="button-area">
+    <button id="new-quote">New Quote</button>
+  </div>
+</div>
 </div> -->
+
+
