--- a/html/DOM.html
+++ b/html/DOM.html
@@ -7,16 +7,7 @@
     <link rel="stylesheet" href="DOM.css" />
   </head>
   <body>
-    <button id="open-btn">
-      <p>Where's our Modal?</p>
-    </button>
-    <div id="modal-container">
-      <div id="modal">
-        <p>Here I am!</p>
-        <div id="close-btn">&times;</div> 
-        <!-- to create the close sign -->
-      </div>
-    </div>
+    
     <script src="DOM.js"></script>
   </body>
 </html>
@@ -26,6 +17,17 @@
 
 
 
+<!-- MODAL -->
+ <!-- <button id="open-btn">
+      <p>Where's our Modal?</p>
+    </button>
+    <div id="modal-container">
+      <div id="modal">
+        <p>Here I am!</p>
+        <div id="close-btn">&times;</div> 
+        to create the close sign
+      </div>
+    </div> -->
 
 
 
@@ -34,8 +36,7 @@
 
 
 
-
-
+<!-- QUOTE GENERATOR -->
 <!-- <div class="container">
   <div class="header">
     <h2>Javascript Quote Generator</h2>
