--- a/html/DOM.html
+++ b/html/DOM.html
@@ -7,7 +7,34 @@
     <link rel="stylesheet" href="DOM.css" />
   </head>
   <body>
-    
+    <div class="accordian">
+      <h2 class="accordian-title">Frequently Asked Questions</h2>
+
+      <div class="content-container">
+        <div class="question">What is the return policy?</div>
+        <div class="answer">
+          Lorem ipsum dolor sit amet consectetur
+           adipisicing elit. Aperiam expedita, maxime incidunt repellendus
+            ducimus voluptatum a ccusantium voluptas possimus neque commodi 
+            quo ut ipsa laborum aspernatur magnam, qui dolores dolorem fuga?</div>
+      </div>
+      <div class="content-container">
+        <div class="question">What is the return policy?</div>
+        <div class="answer">
+          Lorem ipsum dolor sit amet consectetur
+           adipisicing elit. Aperiam expedita, maxime incidunt repellendus
+            ducimus voluptatum a ccusantium voluptas possimus neque commodi 
+            quo ut ipsa laborum aspernatur magnam, qui dolores dolorem fuga?</div>
+      </div>
+      <div class="content-container">
+        <div class="question">What is the return policy?</div>
+        <div class="answer">
+          Lorem ipsum dolor sit amet consectetur
+           adipisicing elit. Aperiam expedita, maxime incidunt repellendus
+            ducimus voluptatum a ccusantium voluptas possimus neque commodi 
+            quo ut ipsa laborum aspernatur magnam, qui dolores dolorem fuga?</div>
+      </div>
+    </div>
     <script src="DOM.js"></script>
   </body>
 </html>
