--- a/html/DOM.html
+++ b/html/DOM.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,16 +8,13 @@
     <link rel="stylesheet" href="DOM.css" />
   </head>
   <body>
-    <div class="accordian">
-      <h2 class="accordian-title">Frequently Asked Questions</h2>
+    <div class="accordion">
+      <h2 class="accordion-title">Frequently Asked Questions</h2>
 
       <div class="content-container">
         <div class="question">What is the return policy?</div>
         <div class="answer">
-          Lorem ipsum dolor sit amet consectetur
-           adipisicing elit. Aperiam expedita, maxime incidunt repellendus
-            ducimus voluptatum a ccusantium voluptas possimus neque commodi 
-            quo ut ipsa laborum aspernatur magnam, qui dolores dolorem fuga?</div>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam expedita, maxime incidunt repellendus ducimus voluptatum a ccusantium voluptas possimus neque commodi quo ut ipsa laborum aspernatur magnam, qui dolores dolorem fuga?</div>
       </div>
       <div class="content-container">
         <div class="question">What is the return policy?</div>
