--- a/html/DOM.html
+++ b/html/DOM.html
@@ -8,29 +8,20 @@
     <link rel="stylesheet" href="DOM.css" />
   </head>
   <body>
-    <div class="accordion">
-      <h2 class="accordion-title">Frequently Asked Questions</h2>
+    <div class="container">
 
-      <div class="content-container">
-        <div class="question">What is the return policy?</div>
-        <div class="answer">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam expedita, maxime incidunt repellendus ducimus voluptatum a ccusantium voluptas possimus neque commodi quo ut ipsa laborum aspernatur magnam, qui dolores dolorem fuga?</div>
+      <div class="timer">
+        00:00:00
       </div>
-      <div class="content-container">
-        <div class="question">What is the return policy?</div>
-        <div class="answer">
-          Lorem ipsum dolor sit amet consectetur
-           adipisicing elit. Aperiam expedita, maxime incidunt repellendus
-            ducimus voluptatum a ccusantium voluptas possimus neque commodi 
-            quo ut ipsa laborum aspernatur magnam, qui dolores dolorem fuga?</div>
-      </div>
-      <div class="content-container">
-        <div class="question">What is the return policy?</div>
-        <div class="answer">
-          Lorem ipsum dolor sit amet consectetur
-           adipisicing elit. Aperiam expedita, maxime incidunt repellendus
-            ducimus voluptatum a ccusantium voluptas possimus neque commodi 
-            quo ut ipsa laborum aspernatur magnam, qui dolores dolorem fuga?</div>
+
+      <div class="buttons">
+    <button id="startStopBtn">
+      <i class="fa-solid fa-play" id="play"></i>
+    </button>
+  
+    <button id="resetBtn">
+      <i class="fa-solid fa-arrow-rotate-left" id="reset"></i>
+    </button>
       </div>
     </div>
     <script src="DOM.js"></script>
@@ -41,6 +32,53 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- ACCORDION.HTML -->
+<!-- <div class="accordion">
+  <h2 class="accordion-title">Frequently Asked Questions</h2>
+
+  <div class="content-container">
+    <div class="question">What is the return policy?</div>
+    <div class="answer">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam expedita, maxime incidunt repellendus ducimus voluptatum a ccusantium voluptas possimus neque commodi quo ut ipsa laborum aspernatur magnam, qui dolores dolorem fuga?</div>
+  </div>
+  <div class="content-container">
+    <div class="question">What is the return policy?</div>
+    <div class="answer">
+      Lorem ipsum dolor sit amet consectetur
+       adipisicing elit. Aperiam expedita, maxime incidunt repellendus
+        ducimus voluptatum a ccusantium voluptas possimus neque commodi 
+        quo ut ipsa laborum aspernatur magnam, qui dolores dolorem fuga?</div>
+  </div>
+  <div class="content-container">
+    <div class="question">What is the return policy?</div>
+    <div class="answer">
+      Lorem ipsum dolor sit amet consectetur
+       adipisicing elit. Aperiam expedita, maxime incidunt repellendus
+        ducimus voluptatum a ccusantium voluptas possimus neque commodi 
+        quo ut ipsa laborum aspernatur magnam, qui dolores dolorem fuga?</div>
+  </div>
+</div> -->
 
 <!-- MODAL -->
  <!-- <button id="open-btn">
@@ -53,13 +91,6 @@
         to create the close sign
       </div>
     </div> -->
-
-
-
-
-
-
-
 
 <!-- QUOTE GENERATOR -->
 <!-- <div class="container">
