--- a/html/DOM.html
+++ b/html/DOM.html
@@ -9,49 +9,21 @@
   </head>
   <body>
     <div class="container">
-
-      <div class="timer">
-        00:00:00
-      </div>
+      <div class="timer">00:00:00</div>
 
       <div class="buttons">
-    <button id="startStopBtn">
-      <i class="fa-solid fa-play" id="play"></i>
-    </button>
-  
-    <button id="resetBtn">
-      <i class="fa-solid fa-arrow-rotate-left" id="reset"></i>
-    </button>
+        <button id="startStopBtn">
+          <i class="fa-solid fa-play" id="play"></i>
+        </button>
+
+        <button id="resetBtn">
+          <i class="fa-solid fa-arrow-rotate-left" id="reset"></i>
+        </button>
       </div>
     </div>
     <script src="DOM.js"></script>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- ACCORDION.HTML -->
 <!-- <div class="accordion">
@@ -81,7 +53,7 @@
 </div> -->
 
 <!-- MODAL -->
- <!-- <button id="open-btn">
+<!-- <button id="open-btn">
       <p>Where's our Modal?</p>
     </button>
     <div id="modal-container">
@@ -111,5 +83,3 @@
   </div>
 </div>
 </div> -->
-
-
