--- a/html/DOM.html
+++ b/html/DOM.html
@@ -8,22 +8,39 @@
     <link rel="stylesheet" href="DOM.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="timer">00:00:00</div>
-
-      <div class="buttons">
-        <button id="startStopBtn">
-          <i class="fa-solid fa-play" id="play"></i>
-        </button>
-
-        <button id="resetBtn">
-          <i class="fa-solid fa-arrow-rotate-left" id="reset"></i>
-        </button>
-      </div>
-    </div>
+    
     <script src="DOM.js"></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- TIMER -->
+<!-- <div class="container">
+  <div class="timer">00:00:00</div>
+
+  <div class="buttons">
+    <button id="startStopBtn">
+      <i class="fa-solid fa-play" id="play"></i>
+    </button>
+
+    <button id="resetBtn">
+      <i class="fa-solid fa-arrow-rotate-left" id="reset"></i>
+    </button>
+  </div>
+</div> -->
 
 <!-- ACCORDION.HTML -->
 <!-- <div class="accordion">
