--- a/html/DOM.html
+++ b/html/DOM.html
@@ -9,6 +9,15 @@
   </head>
   <body>
     
+    <div class="container">
+
+        <div id="add-task-container">
+      <input type="text" placeholder="Enter Task" id="input-task">
+       <button id="add-task"><i class="fa-solid fa-plus">+</i></button>
+      </div>
+    
+    <div class="task-container"></div>
+  </div>
     <script src="DOM.js"></script>
   </body>
 </html>
