--- a/html/DOM.html
+++ b/html/DOM.html
@@ -14,8 +14,11 @@
 
         <div id="add-task-container">
       <input type="text" placeholder="Enter Task" id="input-task">
-       <button id="add-task"><i class="fa-solid fa-plus">+</i></button>
-      </div>
+      <button id="add-task">
+        <i class="fa-solid fa-plus" ></i>
+        +
+      </button>
+            </div>
     
     <div class="task-container"></div>
   </div>
