--- a/html/DOM.html
+++ b/html/DOM.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     
-    <div class="container">
+    <!-- <div class="container">
 
         <div id="add-task-container">
       <input type="text" placeholder="Enter Task" id="input-task">
@@ -22,7 +22,7 @@
     
       <div class="task-container"></div>
 
-  </div>
+  </div> -->
     <script src="DOM.js"></script>
   </body>
 </html>
