--- a/html/pomodoro.html
+++ b/html/pomodoro.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="pomodoro.css">
 </head>
 <body>
-    <h1 id="break-length">Break Length</h1>
+    
     <div class="breaks">
+        <h1 id="break-length">Break Length</h1>
+        <div class="break-numbers">
         <button id="break-"><b>Break -</b></button>
         <p id="number-between"><b>5</b></p>
         <button id="break-plus"><b>Break +</b></button>
+    </div>
     </div>
 
     <h1 id="session-length">Session Length</h1>
