--- a/html/pomodoro.html
+++ b/html/pomodoro.html
@@ -11,17 +11,19 @@
     <div class="breaks">
         <h1 id="break-length">Break Length</h1>
         <div class="break-numbers">
-        <button id="break-"><b>Break -</b></button>
+        <button id="break-minus"><b>Break -</b></button>
         <p id="number-between"><b>5</b></p>
         <button id="break-plus"><b>Break +</b></button>
     </div>
     </div>
 
-    <h1 id="session-length">Session Length</h1>
     <div class="sessions">
+        <h1 id="session-length">Session Length</h1>
+        <div class="session-numbers">
         <button id="session-minus">Session -</button>
         <p id="number-between"><b>25</b></p>
         <button id="session-plus">Session +</button>
+    </div>
     </div>
 </body>
 </html> 
