--- a/html/pomodoro.html
+++ b/html/pomodoro.html
@@ -10,9 +10,9 @@
     <div class="breaks">
         <h1 id="break-length">Break Length</h1>
         <div class="break-numbers">
-        <button id="break-minus"><b>Break -</b></button>
+        <button id="break-minus">Break -</button>
         <p id="number-between"><b>5</b></p>
-        <button id="break-plus"><b>Break +</b></button>
+        <button id="break-plus">Break +</button>
     </div>
     </div>
 
