--- a/html/project.html
+++ b/html/project.html
@@ -10,7 +10,15 @@
 <body>
    <div class="login-page">
     <h1>NAFOWA PRIMARY SHOOL PORTAL</h1>
-    <input type="text" placeholder="Username" >
+    <div id="inputs">
+    <input type="text" placeholder="Username">
+    <input type="text" placeholder="password">
+</div>
+    <br>
+    <div id="links">
+    <a href="">Create account</a>
+    <a href="">Forgot password?</a>
+</div>
    </div>
 </body>
 </html>
