--- a/html/project.html
+++ b/html/project.html
@@ -16,8 +16,9 @@
 </div>
     <br>
     <div id="links">
+        <p>Don't have an account?</p>
     <a href="">Create account</a>
-    <a href="">Forgot password?</a>
+    
 </div>
    </div>
 </body>
