--- a/html/project.html
+++ b/html/project.html
@@ -10,9 +10,9 @@
 <body>
    <div class="login-page">
     <h1>NAFOWA PRIMARY SHOOL PORTAL</h1>
-    <div id="inputs">
-    <input type="text" placeholder="Username">
-    <input type="text" placeholder="password">
+    <div class="inputs">
+    <input type="text" placeholder="Username" id="Username">
+    <input type="text" placeholder="Password" id="password">
 </div>
     <br>
     <div id="links">
