--- a/html/project.html
+++ b/html/project.html
@@ -10,6 +10,7 @@
 <body>
    <div class="login-page">
     <h1>NAFOWA PRIMARY SHOOL PORTAL</h1>
+    <div class="texts">
     <div class="inputs">
     <input type="text" placeholder="Username" id="Username">
     <input type="text" placeholder="Password" id="password">
@@ -17,8 +18,8 @@
     <br>
     <div id="links">
         <p>Don't have an account?</p>
-    <a href="">Create account</a>
-    
+    <a href="" id="create-account">Create account</a>
+</div>
 </div>
    </div>
 </body>
