--- a/html/project.html
+++ b/html/project.html
@@ -9,11 +9,11 @@
 </head>
 <body>
    <div class="login-page">
-    <h1>NAFOWA PRIMARY SHOOL PORTAL</h1>
     <div class="texts">
+    <h1>LOGIN</h1>
     <div class="inputs">
     <input type="text" placeholder="Username" id="Username">
-    <input type="text" placeholder="Password" id="password">
+    <input type="password" placeholder="Password" id="password">
 </div>
     <br>
     <div id="links">
