--- a/html/project.html
+++ b/html/project.html
@@ -15,10 +15,11 @@
     <input type="text" placeholder="Username" id="Username">
     <input type="password" placeholder="Password" id="password">
 </div>
-    <br>
+    <button id="button">Login</button>
     <div id="links">
         <p>Don't have an account?</p>
     <a href="" id="create-account">Create account</a>
+    
 </div>
 </div>
    </div>
