--- a/html/project.html
+++ b/html/project.html
@@ -15,10 +15,10 @@
     <input type="text" placeholder="Username" id="Username">
     <input type="password" placeholder="Password" id="password">
 </div>
-    <button id="button">Login</button>
+    <button id="button" onclick="login()">Login</button>
     <div id="links">
         <p>Don't have an account?</p>
-    <a href="" id="create-account">Create account</a>
+    <a href="" id="create-account">SIGN UP!</a>
     
 </div>
 </div>
