--- a/html/project.html
+++ b/html/project.html
@@ -15,7 +15,7 @@
     <input type="text" placeholder="Username" id="Username">
     <input type="password" placeholder="Password" id="password">
 </div>
-    <button id="button" onclick="login()">Login</button>
+    <button id="button">Login</button>
     <div id="links">
         <p>Don't have an account?</p>
     <a href="" id="create-account">SIGN UP!</a>
