--- a/html/project.html
+++ b/html/project.html
@@ -9,19 +9,19 @@
 </head>
 <body>
    <div class="login-page">
-    <div class="texts">
-    <h1>LOGIN</h1>
-    <div class="inputs">
-    <input type="text" placeholder="Username" id="Username">
-    <input type="password" placeholder="Password" id="password">
-</div>
-    <button id="button">Login</button>
-    <div id="links">
-        <p>Don't have an account?</p>
-    <a href="" id="create-account">SIGN UP!</a>
-    
-</div>
-</div>
-   </div>
+    <div class="texts" id="main-div">
+        <h1>LOGIN</h1>
+        <form class="inputs">
+            <input type="text" placeholder="Username" id="username">
+            <input type="password" placeholder="Password" id="password">
+        </form>
+        <button id="button">Login</button>
+        <div id="links">
+            <p>Don't have an account?</p>
+            <a href="" id="create-account">SIGN UP!</a> 
+        </div>
+    </div>
+ </div>
+   <script src="project.js"></script>
 </body>
 </html>
