--- a/html/project.html
+++ b/html/project.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <div class="login-page">
-    <div class="texts" id="main-div">
+    <div id="main-div">
         <h1>LOGIN</h1>
         <form class="inputs">
             <input type="text" placeholder="Username" id="username">
