--- a/html/project.html
+++ b/html/project.html
@@ -16,6 +16,7 @@
             <input type="password" placeholder="Password" id="password">
         </form>
         <button id="button">Login</button>
+        <p id="success-message"></p>
         <div id="links">
             <p>Don't have an account?</p>
             <a href="" id="create-account">SIGN UP!</a> 
