--- a/html/notepad.html
+++ b/html/notepad.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="note.css" />
+    <link rel="stylesheet" href="project.html">
   </head>
   <body>
     <div class="container">
