--- a/html/project.html
+++ b/html/project.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="project.js">
+    <link rel="stylesheet" href="notepad.html">
     <title>Document</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
             <input type="text" placeholder="Username" id="username">
             <input type="password" placeholder="Password" id="password">
         </form>
-        <button id="button">Login</button>
+        <button id="button"><a href="notepad.html"></a>Login</button>
         <p id="success-message"></p>
         <div id="links">
             <p>Don't have an account?</p>
