--- a/html/project.html
+++ b/html/project.html
@@ -21,6 +21,8 @@
         <div id="links">
             <p>Don't have an account?</p>
             <a href="" id="create-account">SIGN UP!</a> 
+            <br>
+            <input type="text" placeholder="Enter your name" id="user-input">
         </div>
     </div>
  </div>
