--- a/html/DOM.html
+++ b/html/DOM.html
@@ -9,8 +9,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudfare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    
-    <div class="container">
+    <button id="open-btn">
+      <p>Where's our Modal?</p>
+    </button>
+    <div id="modal-container">
+      <div id="modal">
+        <p>Here I am!</p>
+        <div id="close-btn">&times;</div> 
+        to create the close sign
+      </div>
+    </div>
+   
+    <script src="DOM.js"></script>
+  </body>
+</html>
+
+
+
+
+ <!-- <div class="container">
 
         <div id="add-task-container">
       <input type="text" placeholder="Enter Task" id="input-task">
@@ -22,16 +39,7 @@
     
       <div class="task-container"></div>
 
-  </div>
-    <script src="DOM.js"></script>
-  </body>
-</html>
-
-
-
-
-
-
+  </div> -->
 
 
 
@@ -84,16 +92,7 @@
 </div> -->
 
 <!-- MODAL -->
-<!-- <button id="open-btn">
-      <p>Where's our Modal?</p>
-    </button>
-    <div id="modal-container">
-      <div id="modal">
-        <p>Here I am!</p>
-        <div id="close-btn">&times;</div> 
-        to create the close sign
-      </div>
-    </div> -->
+
 
 <!-- QUOTE GENERATOR -->
 <!-- <div class="container">
