--- a/html/stopwatch.html
+++ b/html/stopwatch.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stopwatch.css">
+    <link rel="stylesheet" href="stopwatch.js">
 </head>
 <body>
 <div class="stopwatch">
