--- a/html/stopwatch.html
+++ b/html/stopwatch.html
@@ -9,12 +9,53 @@
 </head>
 <body>
 <div class="stopwatch">
-    <h1>00:00:00</h1>
+    <h1 id="displaytime">00:00:00</h1>
     <div class="button">
-        <button><img src="stop.png" alt=""></button>
-        <button><img src="play.png" alt=""></button>
-        <button><img src="rest.png" alt=""></button>
+        <img src="stop.png" alt="" onclick="watchStop()">
+        <img src="play.png" alt="" onclick="watchStart()">
+        <img src="rest.png" alt="" onclick=" watchReset()">
     </div>
 </div> 
+
+<script>
+    let [seconds, minutes, hours] = [0, 0, 0];
+let displayTime = document.getElementById("displaytime");
+let timer = null;
+
+function stopWatch() {
+  seconds++;
+  if (seconds == 60) {
+    seconds = 0;
+    minutes++;
+    if (minutes == 60) {
+      minutes = 0;
+      hours++;
+    }
+  }
+
+  let h = hours < 10? "0" + hours : hours;
+  let m = minutes < 10? "0" + minutes : minutes;
+  let s = seconds < 10? "0" + seconds : seconds;
+
+  displayTime.innerHTML = h + ":" + m + ":" + s;
+} 
+function watchStart() {
+  if (timer !== null) {
+    clearInterval(timer);
+  }
+  setInterval(stopWatch, 1000);
+}
+function watchStop(){
+    clearInterval(timer);
+
+}
+function watchReset(){
+    clearInterval(timer);
+    [seconds, minutes, hours] = [0, 0, 0];
+    displayTime.innerHTML =  "00:00:00"
+
+}
+ 
+</script>
 </body>
 </html>
