--- a/html/ToDo.html
+++ b/html/ToDo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="ToDo.css">
+    <link rel="stylesheet" href="ToDo.js">
 </head>
 <body>
     <div class="container">
@@ -12,9 +13,30 @@
             <h2>To-Do List</h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
-                <button>Add</button>
+                <button onclick="addTask()">Add</button>
             </div>
+            <p id="alert-info"> </p>
+            <ul id="list-container">
+                <!-- <li class="checked">Task 1</li>
+                <li>Task 2</li>
+                <li>Task 3</li> -->
+            </ul>
         </div>
     </div>
+
+    <script src="ToDo.js">
+        const inputBox = document.getElementById("input-box");
+const listContainer = document.getElementById("list-container");
+const Info = document.getElementById("alert-info");
+function addTask(){
+    if (inputBox.value === ""){
+        Info.innerHTML = "Please input a task."
+    }else{
+       let li = document.createElement("li");
+       li.innerHTML = inputBox.value;
+    //    listContainer.appendChild("li");
+    }
+}
+    </script>
 </body>
 </html>
