--- a/html/ToDo.html
+++ b/html/ToDo.html
@@ -17,26 +17,24 @@
             </div>
             <p id="alert-info"> </p>
             <ul id="list-container">
-                <!-- <li class="checked">Task 1</li>
-                <li>Task 2</li>
-                <li>Task 3</li> -->
+               
             </ul>
         </div>
     </div>
 
     <script src="ToDo.js">
-        const inputBox = document.getElementById("input-box");
-const listContainer = document.getElementById("list-container");
-const Info = document.getElementById("alert-info");
-function addTask(){
-    if (inputBox.value === ""){
-        Info.innerHTML = "Please input a task."
-    }else{
-       let li = document.createElement("li");
-       li.innerHTML = inputBox.value;
-    //    listContainer.appendChild("li");
-    }
-}
+//         const inputBox = document.getElementById("input-box");
+// const listContainer = document.getElementById("list-container");
+// const Info = document.getElementById("alert-info");
+// function addTask(){
+//     if (inputBox.value === ""){
+//         Info.innerHTML = "Please input a task."
+//     }else{
+//        let li = document.createElement("li");
+//        li.innerHTML = inputBox.value;
+//        listContainer.appendChild("li");
+//     }
+// }
     </script>
 </body>
 </html>
