--- a/html/pomodoro.html
+++ b/html/pomodoro.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="pomodoro.css">
 </head>
 <body>
-    <div class="breaks">
+   <div class="main-body">
+     <div class="breaks">
         <h1 id="break-length">Break Length</h1>
         <div class="break-numbers">
         <button id="break-minus">Break -</button>
@@ -24,5 +25,6 @@
         <button id="session-plus">Session +</button>
     </div>
     </div>
+   </div>
 </body>
 </html> 
