--- a/html/practice.html
+++ b/html/practice.html
@@ -8,16 +8,43 @@
     <link rel="stylesheet" href="practice.js" />
   </head>
   <body>
-   <input type="text" id="input-el">
-<button id="save-el">SAVE INPUT</button>
-<ul id="ul-el"></ul>
-
+ <header>
+      <h1>Guess My Number!</h1>
+      <p class="between">(Between 1 and 20)</p>
+      <button class="btn again">Again!</button>
+      <div class="number">?</div>
+    </header>
+    <main>
+      <section class="left">
+        <input type="number" class="guess" />
+        <button class="btn check">Check!</button>
+      </section>
+      <section class="right">
+        <p class="message">Start guessing...</p>
+        <p class="label-score">💯 Score: <span class="score">20</span></p>
+        <p class="label-highscore">
+          🥇 Highscore: <span class="highscore">0</span>
+        </p>
+      </section>
+    </main>
     <script src="practice.js"></script>
-  </body>
+   </body>
 </html>
 
 
 
+
+
+
+
+
+
+<!-- <input type="text" id="input-el">
+<button id="save-el">SAVE INPUT</button>
+<ul id="ul-el"></ul>
+
+    <script src="practice.js"></script> -->
+  
 <!-- <p id = "welcome-el"></p>
 <script src="practice.js"></script> -->
 <!-- <p id="error" onclick="Error()"></p> -->
