--- a/html/practice.html
+++ b/html/practice.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="practice.js" />
   </head>
   <body>
-  <button class="show-modal">Show modal 1</button>
+ 
+
+    <script src="practice.js"></script>
+   </body>
+</html>
+
+
+
+
+
+ <!-- <button class="show-modal">Show modal 1</button>
     <button class="show-modal">Show modal 2</button>
     <button class="show-modal">Show modal 3</button>
 
@@ -25,17 +35,7 @@
         mollit anim id est laborum.
       </p>
     </div>
-    <div class="overlay hidden"></div>
-
-    <script src="practice.js"></script>
-   </body>
-</html>
-
-
-
-
-
-
+    <div class="overlay hidden"></div> -->
 
 
 
