--- a/Password work/password.html
+++ b/Password work/password.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="pasword.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Generate a <br> <span>Random Password</span></h1>
+        <div class="display">
+            <input type="text" name="" id="password-display">
+            <img src="./copy .png">
+        </div>
+        <button id="generate"><img src="./generate.png" alt="">Generate Password</button>
+    </div>
 </body>
 <script src="password.js"></script>
 </html>
