--- a/Password work/password.html
+++ b/Password work/password.html
@@ -10,8 +10,11 @@
     <div class="container">
         <h1>Generate a <br> <span>Random Password</span></h1>
         <div class="display">
-            <input type="text" name="" placeholder="Your Password" id="password-display">
-            <img src="./copy .png" id="copy-img">
+            <input type="password" placeholder="Your Password" id="password-display">
+            <div class="images">
+                <img src="./copy .png" id="copy-img">
+            <img src="./invincible password.png" id="invincible">
+            </div>
         </div>
         <button id="generate"><img src="./generate.png" alt="">Generate Password</button>
     </div>
