--- a/Password work/password.html
+++ b/Password work/password.html
@@ -13,7 +13,8 @@
             <input type="password" placeholder="Your Password" id="password-display">
             <div class="images">
                 <img src="./copy .png" id="copy-img">
-            <img src="./invincible password.png" id="invincible">
+            <img src="./invincible password.png" id="invincible" onclick="passwordVisible()">
+            
             </div>
         </div>
         <button id="generate"><img src="./generate.png" alt="">Generate Password</button>
