--- a/type tester/typer.html
+++ b/type tester/typer.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="typer.css">
 </head>
 <body>
-  <header class="masthead">
+  <div class="container">
+    <header class="masthead">
     <h1>Test Your Typing Speed</h1>
   </header>  
   <div class="intro">
@@ -19,7 +20,13 @@
   </div>
   <div class="display">
     <input type="text" placeholder="The clock starts when you start typing." id="typeArea">
+</div>
+<div class="timer-start">
+    <p id="">00:00:00</p>
+    <button id="start">Start Over</button>
+</div>
   </div>
   </div>
+  <script src=""></script>
 </body>
 </html>
